# opcua-kincony-a16v3

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  sdkconfig  sdkconfig.old
components/esp32-pcf8574/: pcf8574.c
components/esp32-pcf8574/include/: pcf8574.h
components/io_cache/: CMakeLists.txt  io_cache.c  io_cache.h  io_polling.c  loopback_task.c
components/model/: CMakeLists.txt  CMakeLists.txt.backup  ds18b20.c  model.c  model.c.backup_adc  model.c.backup_before_adc_fix  model.c.clean
components/model/include/: ds18b20.h  model.h  model.h.clean
components/open62541lib/: CMakeLists.txt
firmware/: README.md
firmware/v1.0.0/: README.md
main/: opcua_esp32.c  opcua_esp32.c.backup  opcua_esp32.c.backup2  opcua_esp32.c.old  opcua_esp32.h
